Replace usage of list implementation coming from an internal API