@@ -1,6 +1,5 @@
 package jenkins.plugins.jobcacher;
 
-import com.sun.tools.javac.util.List;
 import hudson.model.FreeStyleProject;
 import jenkins.plugins.jobcacher.ArbitraryFileCache.CompressionMethod;
 import org.junit.Rule;
@@ -8,6 +7,7 @@ import org.junit.Test;
 import org.jvnet.hudson.test.JenkinsRule;
 
 import java.io.IOException;
+import java.util.Collections;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -33,7 +33,7 @@ public class ArbitraryFileCacheWrapperTest {
         cache.setCompressionMethod(CompressionMethod.TARGZ);
         cache.setUseDefaultExcludes(false);
 
-        CacheWrapper cacheWrapper = new CacheWrapper(999, List.of(cache));
+        CacheWrapper cacheWrapper = new CacheWrapper(999, Collections.singletonList(cache));
         cacheWrapper.setDefaultBranch("develop");
 
         FreeStyleProject project = jenkinsRule.createProject(FreeStyleProject.class, name);
